@@ -79,10 +79,7 @@ You will have already placed the <filename>vmlinux</filename>,
 <filename>initrd.gz</filename>, <filename>yaboot</filename>, and
 <filename>yaboot.conf</filename> files at the root level of your HFS
 partition in <xref linkend="files-newworld"/>.
-Restart the computer, and immediately (during the chime) hold down the
-<keycap>Option</keycap>, <keycap>Command (cloverleaf/Apple)</keycap>,
-<keycap>o</keycap>, and <keycap>f</keycap> keys all together. After
-a few seconds you will be presented with the Open Firmware prompt.
+You will now have to boot into OpenFirmware (see <xref linkend="invoking-openfirmware"/>).
 At the prompt, type
 
 <informalexample><screen>
@@ -126,10 +123,7 @@ linkend="boot-usb-files"/>. To boot a Macintosh system from a USB stick,
 you will need to use the Open Firmware prompt, since Open Firmware does
 not search USB storage devices by default.
 <!-- TODO: although it could be made to; watch this space -->
-To get to the prompt, hold down
-<keycombo><keycap>Command</keycap> <keycap>Option</keycap>
-<keycap>o</keycap> <keycap>f</keycap></keycombo> all together while
-booting (see <xref linkend="invoking-openfirmware"/>).
+See <xref linkend="invoking-openfirmware"/>.
 
 </para><para>
 
@@ -186,10 +180,26 @@ Currently, PReP and New World PowerMac systems support netbooting.
 
 On machines with Open Firmware, such as NewWorld Power Macs, enter the
 boot monitor (see <xref linkend="invoking-openfirmware"/>) and
-use the command <command>boot enet:0</command>.  PReP and CHRP boxes
+use the command
+
+<informalexample><screen>
+0 &gt; boot enet:0
+</screen></informalexample>
+
+If this doesn't work, you might have to add the filename like this:
+
+<informalexample><screen>
+0 &gt; boot enet:0,yaboot
+</screen></informalexample>
+
+PReP and CHRP boxes
 may have different ways of addressing the network.  On a PReP machine,
 you should try
-<userinput>boot net:<replaceable>server_ipaddr</replaceable>,<replaceable>file</replaceable>,<replaceable>client_ipaddr</replaceable></userinput>.
+
+<informalexample><screen>
+boot net:<replaceable>server_ipaddr</replaceable>,<replaceable>file</replaceable>,<replaceable>client_ipaddr</replaceable>
+</screen></informalexample>
+
 On some PReP systems (e.g. Motorola PowerStack machines) the command
 <userinput>help boot</userinput> may give a description of syntax and
 available options.
