@@ -15,8 +15,8 @@ documentation which came with your machine.
 </para><para>
 
 On &arch-title; Macintoshes, you invoke OpenFirmware with
-<keycombo><keycap>Command</keycap> <keycap>option</keycap>
-<keycap>O</keycap> <keycap>F</keycap></keycombo> while booting.  Generally it
+<keycombo><keycap>Command (cloverleaf/Apple)</keycap> <keycap>Option </keycap>
+<keycap>o</keycap> <keycap>f</keycap></keycombo> while booting.  Generally it
 will check for these keystrokes after the chime, but the exact timing
 varies from model to model.  See
 <ulink url="&url-netbsd-powerpc-faq;"></ulink> for more hints.
